Future year should be changed at the end of the year. Alignment of chart fixed.

--- a/app/assets/stylesheets/app/cms_articles.css.scss
+++ b/app/assets/stylesheets/app/cms_articles.css.scss
@@ -21,7 +21,7 @@ ul.pages{
   font-size: 0.750em;
   color: #777;
   cursor: move;
-}        
+}
 
 .pykih-viz{
     margin: 50px 0px;
@@ -71,7 +71,7 @@ ul.pages{
   }
   .domain {
     display: none;
-  }    
+  }
 }
 
 .cross-filter-body {
@@ -131,7 +131,7 @@ ul.pages{
 }
 
 .cross-filter-body #distance-chart {
-    width: 420px;
+    width: 230px;
 }
 
 .cross-filter-body #date-chart {
